infrastructure/03-apps/baikal/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baikal
  namespace: baikal
  labels:
    app: baikal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baikal
  template:
    metadata:
      labels:
        app: baikal
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 57238
        fsGroup: 57238
      containers:
        - name: baikal
          image: ghcr.io/aalmenar/baikal:0.11.1
          # On court-circuite l'entrypoint qui fait le chown bloquant
          command: ["/usr/local/bin/apache2-foreground"]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 57238
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: baikal-full-dir
              mountPath: /var/www/baikal
            - name: data
              mountPath: /var/www/baikal/Specific
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: baikal-data-pvc
        - name: baikal-full-dir
          emptyDir: {}
