infrastructure/03-apps/baikal/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namespace: baikal
spec:
  selector:
    app: baikal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
